# metron

./: AI-PROMPT.md  Cargo.toml  README.md  USAGE.md  metron_data.json
src/: main.rs  models.rs  storage.rs
src/managers/: analysis_manager.rs  category_manager.rs  mod.rs  session_manager.rs  tag_manager.rs
