[package]
name = "metron"
version = "1.0.0"
edition = "2021"
authors = ["Tara Joy"]
description = "Modular, cross-platform time-tracking app"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
